--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="faq-container">
         <h1>FAQ Section</h1>
         <div class="accordian">
             <div class="accordian-items">
